# wc_group_stage_calculator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: bracket.json  data_cache.json  settings.json  standings_template.json  world_cup_2026_bracket.json
simulator/: annex_c.json  bracket.py  cache.py  cli.py  espn_client.py  match_model.py  models.py  odds_client.py  paths.py  r32_third_place.py  report.py  simulate.py
