[project]
name = "solve-sweepstake"
version = "0.1.0"
description = "WC 2026 group stage Monte Carlo simulator with sweepstake reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "numpy>=1.26.0",
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "matplotlib>=3.10.3",
]

[project.scripts]
wc-sim = "simulator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulator", "scripts"]
only-include = ["simulator", "scripts"]
